// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should keep content as is 1`] = `
"<div class="uml" title="">
Text with **bold** and \`code\`.
</div>"
`;

exports[`should render with options 1`] = `
"<Test class="test" title="">
abc

def
</Test>"
`;

exports[`should render without options 1`] = `
"<div class="uml" title="">
abc
</div>"
`;
